css/style.css
/* ... */
#quarantineArea
{
	background-image: url("../images/quarantineArea.jpg");
	z-index: 2;
	opacity: 0;
}

#forecastContainer { margin-bottom: 10px }
#forecastContainer, #forecastContainer .veil { background-color: var(--dark-grey-background) }
#forecastContainer .concealed { color: var(--dark-grey-background); border: none }
#forecastContainer > p
{
	text-align: center;
	padding: 5px 0;
	font-size: 12px;
}
#forecastContainer .tooltip
{
	font-size: 14px;
}

#setupProcedureContainer
{
	margin-bottom: -2px;
}
#setupContainer h4
{
	padding: 5px;
	margin-bottom: 10px;
	font-weight: 400;
}
#skipSetupButtons
{
	margin: 0 1% 4px 1%;
	height: 20px;
	border: 1px solid #fff;
	border-top: none;
}
.btnSkip
{
	display: inline-block;
	width: 50%;
	text-align: center;
	font-size: 13px;
	padding: 2px 0 1px 0;
	font-family: 'Ropa Sans', sans-serif;
	background-color: #1282b3;
	cursor: pointer;
}
#btnSkipSetup { border-left: 1px solid #fff }
.btnSkip.btnDisabled { border: none; cursor: progress }
#skippingSetupMsg { margin-top: 200px }
#roleSetupContainer, #preparePlayerDeckContainer
{
	padding: 0 12%;
}
#roleSetupContainer .name
{
	border-bottom: none;
}
#roleSetupContainer .role
{
	border: none;
}
.roleContainer { margin-bottom: 10px }
.slotMachine,
#roleSetupContainer .role
{
	text-align: center;
	font-size: 14px;
}
.slotMachine
{
	overflow: hidden;
	border-radius: 2px;
}
.slotMachineOption
{
	border-bottom: 1px solid #000;
	border-left: 1px solid #fff;
	border-right: 1px solid #fff;
}
.slotMachine .selectionWindow
{
	border-top: 4px solid #fff;
	border-bottom: 4px solid #fff;
	z-index: 5;
}
.slotMachineShadow, .slotMachine .selectionWindow
{
	position: absolute;
	width: 14.75%;
}
.slotMachineShadow
{
	background: linear-gradient(to bottom,
		rgba(0, 0, 0, .9),
		rgba(0, 0, 0, .6),
		rgba(0, 0, 0, .2),
		rgba(0, 0, 0, 0),
		rgba(0, 0, 0, .2),
		rgba(0, 0, 0, .6),
		rgba(0, 0, 0, .9))
}
.slotMachine, .slotMachineShadow { height: 90px; }

.roleContainer .playerCard,
.playerCard.drawing
{
	height: 16px;
	line-height: 16px;
	font-size: 12px;
}
.playerCard.drawing { transition: height, line-height, font-size 0.5s }
.roleContainer .playerCard
{
	width: 92%;
	margin-left: 4%;
	margin-bottom: 4px;
}
.playerCard .population
{
	display: block;
	font-size: 10px;
	line-height: 10px;
	font-family: 'B612 Mono', monospace;
}
.roleContainer .playerCard .population
{
	font-size: 9px;
	line-height: 9px;
}
.popRank
{
	position: absolute;
	font-size: 18px;
	font-family: 'B612 Mono', monospace;
	font-weight: 400;
	z-index: 8;
}
#roleSetupContainer .playerPanel
{
	width: 100%;
	border: 1px solid #fff;
}

#preparePlayerDeckContainer > div
{
	margin-bottom: 30px;
}
#preparePlayerDeckContainer .playerCard
{
	height: 20px;
	line-height: 20px;
	font-size: 16px;
}
#preparePlayerDeckContainer img
{
	width: 20px;
}

#errorContainer
{
	padding: 3%;
	font-family: 'Ropa sans', sans-serif;
	font-weight: 400;
}
#errorContainer h3
{
	font-size: 22px;
	margin-bottom: 5px;
}
#curtain #errorContainer * { text-align: left !important }
a,
a:visited
{ color: var(--epidemic-green) }
a:hover { cursor: pointer }
#sideMenu a { text-decoration: underline }

#btnSideMenu,
#sideMenu,
#sideMenuTitle
{ position: absolute }
#btnSideMenu
{
	z-index: 49;
	width: 3%;
	right: 0.3%;
	border-left: 1px solid #fff;
	border-bottom: 1px solid #fff;
	background-color: var(--button-background);
}
#btnSideMenu:hover,
.hamburger:hover
{ background-color: var(--button-background-bright) }
#btnSideMenu.is-active
{
	top: -1px;
	right: 0;
	background-color: #b10e10;
	transition: background-color 0.2s 0.15s;
}
#btnSideMenu.is-active:hover { background-color: #ef282a }
#btnSideMenu:not(.is-active)
{ transition: top, right 0.2s 0.15s }
#sideMenu
{
	z-index: 40;
	display: inline-block;
	background: linear-gradient(to top, var(--main-background-color), #054583);
	border-left: 2px solid #fff;
	font-family: 'Exo 2', sans-serif;
	overflow-y: scroll;
	overflow-x: hidden;
	margin-top: 28px;
}
#sideMenu,
#sideMenuTitle
{
	display: inline-block;
	left: 100%;
}
#sideMenu.is-active,
#sideMenuTitle.is-active
{ left: var(--board-width-percentage) }
#sideMenu.is-active,
#sideMenu:not(.is-active),
#sideMenuTitle.is-active,
#sideMenuTitle:not(.is-active)
{
	transition: left 0.15s;
}
#sideMenuTitle
{
	z-index: 41;
	padding: 3px 0 3px 10px;
	font-size: 18px;
	font-family: "Audiowide", sans-serif;
	background-color: var(--dark-grey-background);
	border-left: 2px solid #fff;
	border-bottom: 2px solid #fff;
}
#sideMenuTitle h2
{ display: inline-block }
#sideMenu > .button
{
	width: 100%;
	margin: 3px 0 0 0;
	font-size: 17px;
	text-align: left;
	padding: 10px;
	z-index: 42;
}
.buttonChevron
{
	position: absolute;
	font-family: 'B612 Mono';
	transform: rotate(180deg);
	-webkit-transform: rotate(180deg); /* Safari */
	-moz-transform: rotate(180deg); /* Firefox */
	-ms-transform: rotate(180deg); /* IE */
	-o-transform: rotate(180deg); /* Opera */
}
.buttonChevron.rightChevron
{
	transform: rotate(90deg);
	-webkit-transform: rotate(90deg); /* Safari */
	-moz-transform: rotate(90deg); /* Firefox */
	-ms-transform: rotate(90deg); /* IE */
	-o-transform: rotate(90deg); /* Opera */
}
#sideMenu > .button .buttonChevron
{
	right: 12px;
	font-size: 32px;
	line-height: 6px;
}
#sideMenu > .button .buttonChevron.rightChevron
{
	right: 20px;
	line-height: 22px;
}
.secondaryButtonContainer,
.tertiaryButtonContainer
{
	width: 100%;
	display: block;
}
.secondaryButtonContainer .button,
.tertiaryButtonContainer .button
{
	width: 97%;
	margin: 1px 0 0 3%;
	padding-right: 20px;
	font-size: 14px;
	text-align: left;
	background-color: #0b668d;
	position: relative;
	z-index: 41;
}
.tertiaryButtonContainer .button
{
	margin-left: 6%;
	padding-top: 0;
	padding-bottom: 0;
}
.secondaryButtonContainer .button:hover
{
	background-color: var(--button-background-bright);
	padding-left: 8px;
}
#sideMenu .button, #sideMenu .button:hover
{ transition: padding .2s }
/* ... */

